# msis21py

./: .gitignore  LICENSE  MANIFEST.in  README.md  debug_build.sh  meson.build  pyproject.toml
scripts/: downloader.py  untar.py
src/msis21fort/: msis21shim.f90
src/msis21py/: __init__.py  base.py  settings.py  utils.py
tests/: test_msis21.py
